fix: resolve CSS parsing errors from NaN values in order book depth visualization
- Fix CSS parsing errors with 'rgba(16, 185, 129, NaN)' in order book bids
- Fix CSS parsing errors with 'rgba(239, 68, 68, NaN)' in order book asks
- Add Double.isNaN() and Double.isInfinite() checks before formatting CSS alpha values
- Cap alpha values to valid CSS range [0.0, 1.0] using Math.min()
- Replace hardcoded division by 200 with properly bounded alpha calculation
- Prevent invalid CSS when bid/ask sizes return NaN or infinite values
- Improves order book rendering stability and eliminates JavaFX CSS parser warnings

Addresses issue: CSS Error parsing '-fx-background-image' with NaN values
These changes ensure order book depth visualization always produces valid CSS.